Defined column values

--- a/player-focus-analytics.ipynb
+++ b/player-focus-analytics.ipynb
@@ -347,6 +347,62 @@
     "FROM subscriptions\n",
     "LIMIT 10"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Subscription Data Schema\n",
+    "\n",
+    "## Core Subscription Fields\n",
+    "\n",
+    "| Field | Description |\n",
+    "|-------|-------------|\n",
+    "| Rando | Random number field (used for sampling/testing) |\n",
+    "| subitem_id | Unique identifier for subscription items (format: si_*) |\n",
+    "| subid | Primary subscription identifier (format: sub_*) |\n",
+    "| created | Full timestamp of subscription creation |\n",
+    "| sub_date | Date portion of subscription creation |\n",
+    "| plan__nickname | Human-readable plan name (e.g., \"PlayerFocus Basic (Monthly)\") |\n",
+    "| plan__id | Unique identifier for price/plan in Stripe (format: price_*) |\n",
+    "| quantity | Number of subscriptions purchased |\n",
+    "| status | Current subscription status (e.g., \"active\") |\n",
+    "| plan__active | Boolean indicating if plan is currently active |\n",
+    "| plan__amount | Amount in cents (e.g., 2000 = $20.00) |\n",
+    "| interval | Billing frequency (\"month\" or \"year\") |\n",
+    "\n",
+    "## Customer and Organization Fields\n",
+    "\n",
+    "| Field | Description |\n",
+    "|-------|-------------|\n",
+    "| cus_id | Unique customer identifier (format: cus_*) |\n",
+    "| divs_division_id | Internal division/organization identifier |\n",
+    "| type | Division type (e.g., \"flex\", \"flex_watch\") |\n",
+    "| creation_time | Division creation timestamp |\n",
+    "\n",
+    "## User Identification Fields\n",
+    "\n",
+    "| Field | Description |\n",
+    "|-------|-------------|\n",
+    "| tp_user_id | Trace platform user ID |\n",
+    "| ur_user_id | User reference ID |\n",
+    "| u_user_id | Universal user ID |\n",
+    "\n",
+    "## Location and Type Fields\n",
+    "\n",
+    "| Field | Description |\n",
+    "|-------|-------------|\n",
+    "| stripe_subscription_type | Payment system subscription type |\n",
+    "| address__state | Customer's state (US abbreviation) |\n",
+    "| address__city | Customer's city |\n",
+    "\n",
+    "### Notes:\n",
+    "- Monetary values stored in cents (divide by 100 for dollars)\n",
+    "- Timestamps include timezone information\n",
+    "- Some geographic data may be null/empty\n",
+    "- Multiple user IDs indicate complex user management system\n"
+   ]
   }
  ],
  "metadata": {
@@ -365,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 (main, Mar  1 2023, 12:33:47) [Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
