Modified intro - added project objectives and data overview

--- a/player-focus-analytics.ipynb
+++ b/player-focus-analytics.ipynb
@@ -8,21 +8,97 @@
     "# PlayerFocus Subscription Analysis Project\n",
     "\n",
     "## Introduction\n",
-    "This project analyzes the performance of Trace's \"just me\" PlayerFocus product, a direct-to-customer (DTC) offering in the sports technology market. By examining subscription data and equipment sales, we aim to provide insights into the effectiveness of Trace's business model and identify areas for potential optimization.\n",
+    "This project analyzes the performance of Trace's \"just me\" PlayerFocus product, a direct-to-customer (DTC) offering in the sports technology market. By examining subscription data and equipment sales, we aim to provide insights into the effectiveness of Trace's business model and identify areas for potential optimization. The analysis focuses on key metrics such as subscription conversion rates, revenue per equipment, and customer distribution patterns to guide strategic decision-making.\n",
+    "\n",
     "## Business Problem\n",
-    "Trace faces a significant challenge with their \"just me\" PlayerFocus product. The company sells camera equipment at a low upfront cost ($495) and relies on subsequent video platform subscriptions to generate revenue. This DTC model has high growth potential but carries substantial fin\n",
-    "ancial risk. If too many cameras are sold without corresponding video platform subscriptions, the company may struggle to offset its business expenses."
+    "Trace faces a significant challenge with their \"just me\" PlayerFocus product. The company sells camera equipment at a low upfront cost ($495) and relies on subsequent video platform subscriptions to generate revenue. This DTC model has high growth potential but carries substantial financial risk. If too many cameras are sold without corresponding video platform subscriptions, the company may struggle to offset its business expenses.\n",
+    "\n",
+    "## Project Objectives\n",
+    "1. **Evaluate Subscription Performance**\n",
+    "   - Track conversion rates from equipment sales to platform subscriptions\n",
+    "   - Analyze the distribution of subscription types and durations\n",
+    "   - Measure revenue generation per equipment sale\n",
+    "\n",
+    "2. **Customer Behavior Analysis**\n",
+    "   - Understand preferences between monthly and annual subscriptions\n",
+    "   - Identify geographic patterns in customer acquisition\n",
+    "   - Analyze division types and their relationship to subscription success\n",
+    "\n",
+    "3. **Revenue Optimization**\n",
+    "   - Assess the effectiveness of different subscription tiers\n",
+    "   - Monitor revenue metrics against target thresholds\n",
+    "   - Identify opportunities for revenue growth\n",
+    "\n",
+    "4. **Market Analysis**\n",
+    "   - Map geographic distribution of customers\n",
+    "   - Identify high-performing regions and potential growth markets\n",
+    "   - Analyze regional variations in subscription behavior\n",
+    "\n",
+    "## Data Overview\n",
+    "The analysis uses subscription data from Trace's database, including:\n",
+    "- Equipment sales information\n",
+    "- Platform subscription details\n",
+    "- Customer geographic data\n",
+    "- Division and organizational structure\n",
+    "- Revenue and pricing data\n",
+    "\n",
+    "This data will be analyzed through a series of SQL queries to extract meaningful insights and support data-driven decision-making for the PlayerFocus product line."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# SQL Magic Commands and Database Connection in Jupyter\n",
-    "%load_ext sql\n",
-    "%sql sqlite:///./data/trace_data.db"
+    "# Subscription Data Schema\n",
+    "\n",
+    "## Core Subscription Fields\n",
+    "\n",
+    "| Field | Description |\n",
+    "|-------|-------------|\n",
+    "| Rando | Random number field (used for sampling/testing) |\n",
+    "| subitem_id | Unique identifier for subscription items (format: si_*) |\n",
+    "| subid | Primary subscription identifier (format: sub_*) |\n",
+    "| created | Full timestamp of subscription creation |\n",
+    "| sub_date | Date portion of subscription creation |\n",
+    "| plan__nickname | Human-readable plan name (e.g., \"PlayerFocus Basic (Monthly)\") |\n",
+    "| plan__id | Unique identifier for price/plan in Stripe (format: price_*) |\n",
+    "| quantity | Number of subscriptions purchased |\n",
+    "| status | Current subscription status (e.g., \"active\") |\n",
+    "| plan__active | Boolean indicating if plan is currently active |\n",
+    "| plan__amount | Amount in cents (e.g., 2000 = $20.00) |\n",
+    "| interval | Billing frequency (\"month\" or \"year\") |\n",
+    "\n",
+    "## Customer and Organization Fields\n",
+    "\n",
+    "| Field | Description |\n",
+    "|-------|-------------|\n",
+    "| cus_id | Unique customer identifier (format: cus_*) |\n",
+    "| divs_division_id | Internal division/organization identifier |\n",
+    "| type | Division type (e.g., \"flex\", \"flex_watch\") |\n",
+    "| creation_time | Division creation timestamp |\n",
+    "\n",
+    "## User Identification Fields\n",
+    "\n",
+    "| Field | Description |\n",
+    "|-------|-------------|\n",
+    "| tp_user_id | Trace platform user ID |\n",
+    "| ur_user_id | User reference ID |\n",
+    "| u_user_id | Universal user ID |\n",
+    "\n",
+    "## Location and Type Fields\n",
+    "\n",
+    "| Field | Description |\n",
+    "|-------|-------------|\n",
+    "| stripe_subscription_type | Payment system subscription type |\n",
+    "| address__state | Customer's state (US abbreviation) |\n",
+    "| address__city | Customer's city |\n",
+    "\n",
+    "### Notes:\n",
+    "- Monetary values stored in cents (divide by 100 for dollars)\n",
+    "- Timestamps include timezone information\n",
+    "- Some geographic data may be null/empty\n",
+    "- Multiple user IDs indicate complex user management system\n"
    ]
   },
   {
@@ -38,7 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SQL Magic Commands and Database Connection in Jupyter\n",
+    "%load_ext sql\n",
+    "%sql sqlite:///./data/trace_data.db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +423,7 @@
        " (0.58637892911572, 'si_O5mpy3ZVEXCAdT', 'sub_1NJbFOGiU1oRXdcXDRvj69ZU', '2023-06-16 11:55:22.000000', '2023-06-16', 'Equipment Subscription (Annual)', 'price_1MpFtjGiU1oRXdcXpGUJ5fOA', 1, 'active', 'TRUE', 49500, 'year', 'cus_O5mpPd4GmKECEJ', 5976.0, 'flex_watch', '2023-06-16 15:08:15.000000', 4623735, 4624600.0, 4623735, 'flex_pay2unlock', 'MD', 'Dunkirk')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,60 +436,11 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "# Subscription Data Schema\n",
-    "\n",
-    "## Core Subscription Fields\n",
-    "\n",
-    "| Field | Description |\n",
-    "|-------|-------------|\n",
-    "| Rando | Random number field (used for sampling/testing) |\n",
-    "| subitem_id | Unique identifier for subscription items (format: si_*) |\n",
-    "| subid | Primary subscription identifier (format: sub_*) |\n",
-    "| created | Full timestamp of subscription creation |\n",
-    "| sub_date | Date portion of subscription creation |\n",
-    "| plan__nickname | Human-readable plan name (e.g., \"PlayerFocus Basic (Monthly)\") |\n",
-    "| plan__id | Unique identifier for price/plan in Stripe (format: price_*) |\n",
-    "| quantity | Number of subscriptions purchased |\n",
-    "| status | Current subscription status (e.g., \"active\") |\n",
-    "| plan__active | Boolean indicating if plan is currently active |\n",
-    "| plan__amount | Amount in cents (e.g., 2000 = $20.00) |\n",
-    "| interval | Billing frequency (\"month\" or \"year\") |\n",
-    "\n",
-    "## Customer and Organization Fields\n",
-    "\n",
-    "| Field | Description |\n",
-    "|-------|-------------|\n",
-    "| cus_id | Unique customer identifier (format: cus_*) |\n",
-    "| divs_division_id | Internal division/organization identifier |\n",
-    "| type | Division type (e.g., \"flex\", \"flex_watch\") |\n",
-    "| creation_time | Division creation timestamp |\n",
-    "\n",
-    "## User Identification Fields\n",
-    "\n",
-    "| Field | Description |\n",
-    "|-------|-------------|\n",
-    "| tp_user_id | Trace platform user ID |\n",
-    "| ur_user_id | User reference ID |\n",
-    "| u_user_id | Universal user ID |\n",
-    "\n",
-    "## Location and Type Fields\n",
-    "\n",
-    "| Field | Description |\n",
-    "|-------|-------------|\n",
-    "| stripe_subscription_type | Payment system subscription type |\n",
-    "| address__state | Customer's state (US abbreviation) |\n",
-    "| address__city | Customer's city |\n",
-    "\n",
-    "### Notes:\n",
-    "- Monetary values stored in cents (divide by 100 for dollars)\n",
-    "- Timestamps include timezone information\n",
-    "- Some geographic data may be null/empty\n",
-    "- Multiple user IDs indicate complex user management system\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -421,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (main, Mar  1 2023, 12:33:47) [Clang 14.0.6 ]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
