Started to work on Objective 1: Evaluate Subscription Performance

--- a/player-focus-analytics.ipynb
+++ b/player-focus-analytics.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        " (0.58637892911572, 'si_O5mpy3ZVEXCAdT', 'sub_1NJbFOGiU1oRXdcXDRvj69ZU', '2023-06-16 11:55:22.000000', '2023-06-16', 'Equipment Subscription (Annual)', 'price_1MpFtjGiU1oRXdcXpGUJ5fOA', 1, 'active', 'TRUE', 49500, 'year', 'cus_O5mpPd4GmKECEJ', 5976.0, 'flex_watch', '2023-06-16 15:08:15.000000', 4623735, 4624600.0, 4623735, 'flex_pay2unlock', 'MD', 'Dunkirk')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,6 +433,296 @@
     "SELECT *\n",
     "FROM subscriptions\n",
     "LIMIT 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To disable autocomplete\n",
+    "# %config Completer.use_jedi = False\n",
+    "\n",
+    "# To enable autocomplete\n",
+    "# %config Completer.use_jedi = True"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Objective 1: \n",
+    "**Evaluate Subscription Performance**\n",
+    "- Count how many total Equipment Subscriptions exist\n",
+    "- List all unique subscription types (plan__nickname) available\n",
+    "- Count how many subscriptions are monthly vs yearly\n",
+    "- Calculate the total revenue from active Equipment Subscriptions\n",
+    "- Find the monthly trend of new Equipment Subscription sales in 2023\n",
+    "- Calculate the average time between equipment purchase and platform subscription\n",
+    "- Calculate the conversion rate from Equipment Subscriptions to Platform Subscriptions\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///./data/trace_data.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>count(*)</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1715</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1715,)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- How many total Equipment Subscriptions exists\n",
+    "SELECT count(*)\n",
+    "FROM subscriptions\n",
+    "WHERE plan__active = 'TRUE'\n",
+    "    AND status = 'active'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///./data/trace_data.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>plan__nickname</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus Basic (Monthly)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Equipment Subscription (Annual)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus Pro (Annual)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus (Annual)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus Pro (Annual - Watch)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus Basic (Monthly - Watch)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Equipment Subscription (Renewal - Annual)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus Basic (Annual - Watch)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus Pro (Monthly - Watch)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus Pro (Monthly)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus Vault (Annual)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Basic (Monthly)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus Basic (Annual)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Basic (Annual)</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus Annual</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>PlayerFocus (Annual - Watch)</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('PlayerFocus Basic (Monthly)',),\n",
+       " ('Equipment Subscription (Annual)',),\n",
+       " ('PlayerFocus Pro (Annual)',),\n",
+       " ('PlayerFocus (Annual)',),\n",
+       " ('PlayerFocus Pro (Annual - Watch)',),\n",
+       " ('PlayerFocus Basic (Monthly - Watch)',),\n",
+       " ('Equipment Subscription (Renewal - Annual)',),\n",
+       " ('PlayerFocus Basic (Annual - Watch)',),\n",
+       " ('PlayerFocus Pro (Monthly - Watch)',),\n",
+       " ('PlayerFocus Pro (Monthly)',),\n",
+       " ('PlayerFocus Vault (Annual)',),\n",
+       " ('Basic (Monthly)',),\n",
+       " ('PlayerFocus Basic (Annual)',),\n",
+       " ('Basic (Annual)',),\n",
+       " ('PlayerFocus Annual',),\n",
+       " ('PlayerFocus (Annual - Watch)',)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- List all unique subscriptions types available\n",
+    "SELECT DISTINCT(plan__nickname)\n",
+    "FROM subscriptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///./data/trace_data.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>monthly_count</th>\n",
+       "            <th>annual_count</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>229</td>\n",
+       "            <td>1491</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(229, 1491)]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- How many subscriptions there are monthly vs yearly\n",
+    "\n",
+    "WITH monthly as(\n",
+    "SELECT \n",
+    "count(*)\n",
+    "FROM subscriptions\n",
+    "WHERE plan__nickname LIKE '%Monthly%'\n",
+    "),\n",
+    "annually as (\n",
+    "   SELECT \n",
+    "count(*) as subs_yearly\n",
+    "FROM subscriptions\n",
+    "WHERE plan__nickname LIKE '%Annual%' \n",
+    ")\n",
+    "SELECT \n",
+    "    (SELECT * FROM monthly) AS monthly_count,\n",
+    "    (SELECT * FROM annually) AS annual_count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///./data/trace_data.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>total_revenue</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>52097500</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(52097500,)]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- Total Revenue from Active Equipment Subscriptions\n",
+    "SELECT SUM(plan__amount) as total_revenue\n",
+    "FROM subscriptions\n",
+    "WHERE status like'%active%'\n",
+    "    AND plan__active like'%True%'"
    ]
   },
   {
